criação da tela de clientes

--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -42,3 +42,7 @@ tr.details td.details-control:before {
     right: 15px; 
     bottom: 15px;
 }
+#map {
+    height: 300px; /* The height is 400 pixels */
+    width: 100%; /* The width is the width of the web page */
+}
